{
  "version": 4,
  "terraform_version": "0.14.8",
  "serial": 288,
  "lineage": "03fc377a-4fff-ef59-4902-d68297d92cfb",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "wp_private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_route_table_id": "rtb-020341e44925e1932",
            "id": "rtb-020341e44925e1932",
            "owner_id": "804027447394",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "wp_private"
            },
            "vpc_id": "vpc-088442cf0b4208289"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.wp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_elb",
      "name": "wp_elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:804027447394:loadbalancer/mydomainname-elb",
            "availability_zones": [
              "us-east-1a",
              "us-east-1b"
            ],
            "connection_draining": true,
            "connection_draining_timeout": 400,
            "cross_zone_load_balancing": true,
            "dns_name": "mydomainname-elb-1678652289.us-east-1.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 2,
                "interval": 30,
                "target": "TCP:80",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "mydomainname-elb",
            "idle_timeout": 400,
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "mydomainname-elb",
            "security_groups": [
              "sg-0778071cf56d31a83"
            ],
            "source_security_group": "804027447394/wp_public_sg",
            "source_security_group_id": "sg-0778071cf56d31a83",
            "subnets": [
              "subnet-0dbba9d8803e5903f",
              "subnet-0f6e2d8a81766f937"
            ],
            "tags": {
              "Name": "wp-mydomainname-elb"
            },
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.wp_public_sg",
            "aws_subnet.wp_public_1_subnet",
            "aws_subnet.wp_public_2_subnet",
            "aws_vpc.wp_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "wp_dev",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-042e8287309f5df03",
            "arn": "arn:aws:ec2:us-east-1:804027447394:instance/i-0c10e6c73c254f544",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "s3_access",
            "id": "i-0c10e6c73c254f544",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "my_key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-003acc180e8b53978",
            "private_dns": "ip-10-0-1-247.ec2.internal",
            "private_ip": "10.0.1.247",
            "public_dns": "ec2-3-88-209-80.compute-1.amazonaws.com",
            "public_ip": "3.88.209.80",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 100,
                "kms_key_id": "arn:aws:kms:us-east-1:804027447394:key/b2b309ea-418b-42c3-b30e-cb6282281b7f",
                "throughput": 0,
                "volume_id": "vol-012678038ccb12200",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0dbba9d8803e5903f",
            "tags": {
              "Name": "wp_dev"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0dffc47bf23d91b2b"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.s3_access_profile",
            "aws_iam_role.s3_access_role",
            "aws_key_pair.wp_auth",
            "aws_s3_bucket.wp_code_bucket",
            "aws_security_group.wp_dev_sg",
            "aws_subnet.wp_public_1_subnet",
            "aws_vpc.wp_vpc",
            "data.aws_availability_zones.available",
            "data.http.myip",
            "random_id.wp_code_bucket"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "wp_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:804027447394:internet-gateway/igw-09d718eea70bb3283",
            "id": "igw-09d718eea70bb3283",
            "owner_id": "804027447394",
            "tags": {
              "Name": "wp_igw"
            },
            "vpc_id": "vpc-088442cf0b4208289"
          },
          "dependencies": [
            "aws_vpc.wp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "wp_public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0edd33e9c23c720f1",
            "owner_id": "804027447394",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09d718eea70bb3283",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "wp_public"
            },
            "vpc_id": "vpc-088442cf0b4208289"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.wp_internet_gateway",
            "aws_vpc.wp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "wp_private1_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-089716ec7265324da",
            "route_table_id": "rtb-020341e44925e1932",
            "subnet_id": "subnet-038e85139cec636a2"
          },
          "dependencies": [
            "aws_default_route_table.wp_private_rt",
            "aws_subnet.wp_private_1_subnet",
            "aws_vpc.wp_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "wp_private2_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-056c62dec97774d0f",
            "route_table_id": "rtb-020341e44925e1932",
            "subnet_id": "subnet-000e5317c859e7da1"
          },
          "dependencies": [
            "aws_default_route_table.wp_private_rt",
            "aws_subnet.wp_private_2_subnet",
            "aws_vpc.wp_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "wp_public1_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-052707beb3c242695",
            "route_table_id": "rtb-0edd33e9c23c720f1",
            "subnet_id": "subnet-0dbba9d8803e5903f"
          },
          "dependencies": [
            "aws_internet_gateway.wp_internet_gateway",
            "aws_route_table.wp_public_rt",
            "aws_subnet.wp_public_1_subnet",
            "aws_vpc.wp_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "wp_public2_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cbcb37e1a507ece3",
            "route_table_id": "rtb-0edd33e9c23c720f1",
            "subnet_id": "subnet-0f6e2d8a81766f937"
          },
          "dependencies": [
            "aws_internet_gateway.wp_internet_gateway",
            "aws_route_table.wp_public_rt",
            "aws_subnet.wp_public_2_subnet",
            "aws_vpc.wp_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wp_dev_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:804027447394:security-group/sg-0dffc47bf23d91b2b",
            "description": "Used for access from dev instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dffc47bf23d91b2b",
            "ingress": [
              {
                "cidr_blocks": [
                  "58.186.116.138/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "58.186.116.138/32"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "wp_dev_sg",
            "name_prefix": "",
            "owner_id": "804027447394",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-088442cf0b4208289"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.wp_vpc",
            "data.http.myip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wp_private_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:804027447394:security-group/sg-0435a0fc2f14222aa",
            "description": "Used for private instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0435a0fc2f14222aa",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "wp_private_sg",
            "name_prefix": "",
            "owner_id": "804027447394",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-088442cf0b4208289"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.wp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wp_public_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:804027447394:security-group/sg-0778071cf56d31a83",
            "description": "Used for ELB for public access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0778071cf56d31a83",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "wp_public_sg",
            "name_prefix": "",
            "owner_id": "804027447394",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-088442cf0b4208289"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.wp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wp_rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:804027447394:security-group/sg-04c436303bf704947",
            "description": "Used for rds access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04c436303bf704947",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0435a0fc2f14222aa",
                  "sg-0778071cf56d31a83",
                  "sg-0dffc47bf23d91b2b"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "wp_rds_sg",
            "name_prefix": "",
            "owner_id": "804027447394",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-088442cf0b4208289"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.wp_dev_sg",
            "aws_security_group.wp_private_sg",
            "aws_security_group.wp_public_sg",
            "aws_vpc.wp_vpc",
            "data.http.myip"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wp_private_1_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:804027447394:subnet/subnet-038e85139cec636a2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-038e85139cec636a2",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "804027447394",
            "tags": {
              "Name": "wp_private1"
            },
            "vpc_id": "vpc-088442cf0b4208289"
          },
          "dependencies": [
            "aws_vpc.wp_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wp_private_2_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:804027447394:subnet/subnet-000e5317c859e7da1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-000e5317c859e7da1",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "804027447394",
            "tags": {
              "Name": "wp_private2"
            },
            "vpc_id": "vpc-088442cf0b4208289"
          },
          "dependencies": [
            "aws_vpc.wp_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wp_public_1_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:804027447394:subnet/subnet-0dbba9d8803e5903f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0dbba9d8803e5903f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "804027447394",
            "tags": {
              "Name": "wp_public1"
            },
            "vpc_id": "vpc-088442cf0b4208289"
          },
          "dependencies": [
            "aws_vpc.wp_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wp_public_2_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:804027447394:subnet/subnet-0f6e2d8a81766f937",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0f6e2d8a81766f937",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "804027447394",
            "tags": {
              "Name": "wp_public2"
            },
            "vpc_id": "vpc-088442cf0b4208289"
          },
          "dependencies": [
            "aws_vpc.wp_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wp_rds1_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:804027447394:subnet/subnet-0f19945850c68f2fa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-0f19945850c68f2fa",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "804027447394",
            "tags": {
              "Name": "wp_rds_1"
            },
            "vpc_id": "vpc-088442cf0b4208289"
          },
          "dependencies": [
            "aws_vpc.wp_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wp_rds2_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:804027447394:subnet/subnet-057244039e5b52306",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-057244039e5b52306",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "804027447394",
            "tags": {
              "Name": "wp_rds_2"
            },
            "vpc_id": "vpc-088442cf0b4208289"
          },
          "dependencies": [
            "aws_vpc.wp_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wp_rds3_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:804027447394:subnet/subnet-092ca3c76500c6091",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.7.0/24",
            "id": "subnet-092ca3c76500c6091",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "804027447394",
            "tags": {
              "Name": "wp_rds_3"
            },
            "vpc_id": "vpc-088442cf0b4208289"
          },
          "dependencies": [
            "aws_vpc.wp_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "wp_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:804027447394:vpc/vpc-088442cf0b4208289",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ef8b4a91b71e4706",
            "default_route_table_id": "rtb-020341e44925e1932",
            "default_security_group_id": "sg-0ed1e816d5bf9cdc7",
            "dhcp_options_id": "dopt-07cde1e789fc18a40",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-088442cf0b4208289",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-020341e44925e1932",
            "owner_id": "804027447394",
            "tags": {
              "Name": "wp_vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "wp_private_s3_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:804027447394:vpc-endpoint/vpce-0cd7e838ed7243130",
            "cidr_blocks": [
              "54.231.0.0/17",
              "52.216.0.0/15",
              "3.5.0.0/18"
            ],
            "id": "vpce-0cd7e838ed7243130",
            "owner_id": "804027447394",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-020341e44925e1932",
              "rtb-0edd33e9c23c720f1"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "state": "available",
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-088442cf0b4208289"
          },
          "dependencies": [
            "aws_internet_gateway.wp_internet_gateway",
            "aws_route_table.wp_public_rt",
            "aws_vpc.wp_vpc"
          ]
        }
      ]
    }
  ]
}